[build-system]
requires = [
    "setuptools >= 35.0.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "prsmsp"
version = "1.0.0"
description = "Package to work with sms panels"
authors = [
    {name = "Parsa Riyahi", email="pany.parsariyahi@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

keywords = ["sms", "smspanel"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development", 
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.20",
    "suds>=1.0",
]

[project.urls]
homepage = "https://github.com/parsariyahi/prsmsp"
documentation = "https://github.com/parsariyahi/prsmsp"
repository = "https://github.com/parsariyahi/prsmsp"
