[metadata]
name = prsmsp
version = 1.2.0
author = Parsa Riyahi
author_email = pany.parsariyahi@gmail.com
description = Package to work with sms panels
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = file: LICENSE
url = https://github.com/parsariyahi/prsmsp
project_urls =
    Homepage = https://github.com/parsariyahi/prsmsp
    Documentation = https://prsmsp.readthedocs.io/en/latest/
    Source = https://github.com/parsariyahi/prsmsp
    Tracker = https://github.com/parsariyahi/prsmsp/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
include_package_data = true
zip_safe = false
packages = find:
install_requires =
    requests>=2.20
